--- a/example/src/index.html
+++ b/example/src/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Example</title>
+        <meta charset="utf-8">
     </head>
     <body>
         <!-- teseract:entrypoint -->
