--- a/example/src/index.html
+++ b/example/src/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Example</title>
         <meta charset="utf-8">
+        <!-- teseract:style -->
     </head>
     <body>
         <!-- teseract:entrypoint -->
