make example more complex

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -5,6 +5,7 @@
         <!-- teseract:style -->
     </head>
     <body>
+        <div id="app"></div>
         <!-- teseract:entrypoint -->
     </body>
 </html>
