--- a/example/src/index.html
+++ b/example/src/index.html
@@ -2,10 +2,10 @@
     <head>
         <title>Example</title>
         <meta charset="utf-8">
-        <!-- teseract:style -->
+        <!-- teseract:css -->
     </head>
     <body>
         <div id="app"></div>
-        <!-- teseract:entrypoint -->
+        <!-- teseract:js -->
     </body>
 </html>
